# fyp-artefact-and-results

./: README.md
case-study/: CMakeLists.txt  config.json
case-study/src/: main.cc  main.ih
case-study/src/components/actions/: actions.cc  actions.h  actions.ih
case-study/src/components/calendar/: calendar.cc  calendar.h  calendar.ih
case-study/src/components/components/: components.cc  components.h  components.ih
case-study/src/components/environment/: environment.cc  environment.h  environment.ih
case-study/src/components/needs/: needs.cc  needs.h  needs.ih
case-study/src/components/population/: population.h
case-study/src/components/trace/: trace.cc  trace.h  trace.ih
case-study/src/components/traits/: traits.h
case-study/src/config/: config.h
case-study/src/flecs/: flecs.c  flecs.h
case-study/src/helper/: graph.cc  graph.h  graph.ih
case-study/src/rules/: rules.cc  rules.h  rules.ih
case-study/src/world/: world.cc  world.h  world.ih
evaluation-scripts/: eval_1.ipynb  eval_ind_intentionality.ipynb  eval_ind_motivation.ipynb  eval_pop_duration_times.ipynb  thesis.yml
evaluation-scripts/.ipynb_checkpoints/: eval_ind_characterhood-checkpoint.ipynb  eval_pop_percentiles-checkpoint.ipynb  eval_pop_variety_seq_length-checkpoint.ipynb
results/simulation_2023-05-17 15:58:22/: calendar.txt  meta.csv  traces.txt
results/simulation_2023-05-17 15:58:22/needs/: needs_0.csv  needs_1.csv  needs_10.csv  needs_100.csv  needs_101.csv  needs_102.csv  needs_103.csv  needs_104.csv  needs_105.csv  needs_106.csv  needs_107.csv  needs_108.csv  needs_109.csv  (+987 more)
